# near-data-layer

./: .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.postgres  EXECUTION_OUTCOME_RESULTS.md  MAINNET_LAUNCH.md  Makefile  README.md  RUNBOOK.md  buf.gen.yaml  buf.yaml  config.toml  docker-compose.local.yml  docker-compose.yml  near-substreams-sql-sink-v0.1.0.spkg  requirements.txt  rust-toolchain.toml  schema.sql  substreams.yaml  tarpaulin.toml  test.sh
.github/: dev.yml  pull_request_template.md
.github/workflows/: dev.yml  hos-dev.yml  hos-prd.yml  hos-stg.yml  prod-2.yml  prod.yml  refresh_views.yml  (+3 more)
config/: dev.json  dev.toml
configs/: development.toml  mainnet-dev.toml  mainnet-development.toml  mainnet-prod.toml  mainnet-staging.toml  mainnet.toml  production.toml  staging.toml  testnet.toml
docs/: sql_views_cicd_workflow.md
materialized_views/: approved_proposals.sql  check_latest_job_run_status.sql  delegation_events.sql  proposal_non_voters.sql  proposal_voting_history.sql  proposals.sql  registered_voters.sql  user_activities.sql
proto/: block_meta.proto  entities.proto
scripts/: Cargo.toml  copy_env.sh  deploy-views.sh  example_queries.sql  fetch_secrets.sh  manage_views.py  requirements.txt  start.sh  test-views.sh  test_contract_init_result.py  test_execution_outcome_result.py  test_execution_outcome_result.rs  test_receipt_action_arguments.py
sink/: substreams.dev.yaml  substreams.simple.yaml
sql_views/: approved_proposals.sql  delegation_events.sql  example_usage.sql  fix_json_parsing.sql  proposal_voting_history.sql  proposals.sql  registered_voters.sql  safe_json_parsing.sql  summary_of_changes.sql  test_safe_json.sql  user_activities.sql
src/: config.rs  database.rs  indexer.rs  lib.rs  main.rs  metrics.rs  processor.rs
tests/: config_unit_tests.rs  database_integration_tests.rs  database_unit_tests.rs  metrics_unit_tests.rs  processor_business_logic_tests.rs
(+40 files in other folders)
