[package]
name = "near-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# FastNEAR dependencies
fastnear-neardata-fetcher = "0.34.2"
fastnear-primitives = "0.34.2"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# Serialization
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# Configuration
config = "0.15.13"
dotenvy = "0.15"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Error handling
anyhow = "1.0.82"

# CLI
clap = { version = "4.5.4", features = ["derive"] }

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }

# Signal handling
ctrlc = "3.4.2"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4.4" 